--- a/index.html
+++ b/index.html
@@ -334,8 +334,7 @@ Mon but est que chaque séance soit un bon moment, et que chaque modèle reparte
       </div>
 
       <div class="hero-photo">
-        <!-- Mets ici l'image de l'homme avec l'appareil -->
-        <img src="images/hero-bg.jpg" alt=>
+        <img src="hero-bg.jpg" alt=>
         <div class="hero-label">
       </div>
     </div>
@@ -362,10 +361,10 @@ C’est avant tout pour partager ma passion et créer de belles images ensemble.
     <div class="gallery-grid">
       <!-- Remplace les src par tes fichiers -->
       <div class="gallery-item">
-        <img src="images/1.jpg" alt="Photo 1">
+        <img src="1.jpg" alt="Photo 1">
       </div>
       <div class="gallery-item">
-        <img src="images/2.jpg" alt="Photo 2">
+        <img src="2.jpg" alt="Photo 2">
       </div>
       <div class="gallery-item">
         <img src="images/photo3.jpg" alt="Photo 3">
@@ -429,4 +428,5 @@ C’est avant tout pour partager ma passion et créer de belles images ensemble.
   </script>
 
 </body>
+
 </html>
