--- a/index.html
+++ b/index.html
@@ -367,13 +367,13 @@ C’est avant tout pour partager ma passion et créer de belles images ensemble.
         <img src="2.jpg" alt="Photo 2">
       </div>
       <div class="gallery-item">
-        <img src="images/photo3.jpg" alt="Photo 3">
+        <img src="3.jpg" alt="Photo 3">
       </div>
       <div class="gallery-item">
-        <img src="images/photo4.jpg" alt="Photo 4">
+        <img src="4.jpg" alt="Photo 4">
       </div>
       <div class="gallery-item">
-        <img src="images/photo5.jpg" alt="Photo 5">
+        <img src="8.jpg" alt="Photo 5">
       </div>
       <div class="gallery-item">
         <img src="images/photo6.jpg" alt="Photo 6">
@@ -430,3 +430,4 @@ C’est avant tout pour partager ma passion et créer de belles images ensemble.
 </body>
 
 </html>
+
