--- a/index.html
+++ b/index.html
@@ -378,6 +378,33 @@ C’est avant tout pour partager ma passion et créer de belles images ensemble.
       <div class="gallery-item">
         <img src="images/photo6.jpg" alt="Photo 6">
       </div>
+      <div class="gallery-item">
+        <img src="images/photo6.jpg" alt="Photo 6">
+      </div>
+      <div class="gallery-item">
+        <img src="images/photo6.jpg" alt="Photo 6">
+      </div>
+      <div class="gallery-item">
+        <img src="images/photo6.jpg" alt="Photo 6">
+      </div>
+      <div class="gallery-item">
+        <img src="images/photo6.jpg" alt="Photo 6">
+      </div>
+      <div class="gallery-item">
+        <img src="images/photo6.jpg" alt="Photo 6">
+      </div>
+      <div class="gallery-item">
+        <img src="images/photo6.jpg" alt="Photo 6">
+      </div>
+      <div class="gallery-item">
+        <img src="images/photo6.jpg" alt="Photo 6">
+      </div>
+      <div class="gallery-item">
+        <img src="images/photo6.jpg" alt="Photo 6">
+      </div>
+      <div class="gallery-item">
+        <img src="images/photo6.jpg" alt="Photo 6">
+      </div>
     </div>
   </section>
 
@@ -430,4 +457,5 @@ C’est avant tout pour partager ma passion et créer de belles images ensemble.
 </body>
 
 </html>
+
 
