--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ C’est avant tout pour partager ma passion et créer de belles images ensemble.
         <img src="8.jpg" alt="Photo 5">
       </div>
       <div class="gallery-item">
-        <img src="images/photo6.jpg" alt="Photo 6">
+        <img src="22.jpg" alt="Photo 6">
       </div>
       <div class="gallery-item">
         <img src="images/photo6.jpg" alt="Photo 6">
@@ -457,5 +457,6 @@ C’est avant tout pour partager ma passion et créer de belles images ensemble.
 </body>
 
 </html>
+
 
 
