--- a/index.html
+++ b/index.html
@@ -379,28 +379,28 @@ C’est avant tout pour partager ma passion et créer de belles images ensemble.
         <img src="22.jpg" alt="Photo 6">
       </div>
       <div class="gallery-item">
-        <img src="images/photo6.jpg" alt="Photo 6">
+        <img src="20.jpg" alt="Photo 6">
       </div>
       <div class="gallery-item">
-        <img src="images/photo6.jpg" alt="Photo 6">
+        <img src="18.jpg" alt="Photo 6">
       </div>
       <div class="gallery-item">
-        <img src="images/photo6.jpg" alt="Photo 6">
+        <img src="17.jpg" alt="Photo 6">
       </div>
       <div class="gallery-item">
-        <img src="images/photo6.jpg" alt="Photo 6">
+        <img src="16.jpg" alt="Photo 6">
       </div>
       <div class="gallery-item">
-        <img src="images/photo6.jpg" alt="Photo 6">
+        <img src="15.jpg" alt="Photo 6">
       </div>
       <div class="gallery-item">
-        <img src="images/photo6.jpg" alt="Photo 6">
+        <img src="14.jpg" alt="Photo 6">
       </div>
       <div class="gallery-item">
-        <img src="images/photo6.jpg" alt="Photo 6">
+        <img src="13.jpg" alt="Photo 6">
       </div>
       <div class="gallery-item">
-        <img src="images/photo6.jpg" alt="Photo 6">
+        <img src="11.jpg" alt="Photo 6">
       </div>
       <div class="gallery-item">
         <img src="images/photo6.jpg" alt="Photo 6">
@@ -457,6 +457,7 @@ C’est avant tout pour partager ma passion et créer de belles images ensemble.
 </body>
 
 </html>
+
 
 
 
